--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# ---- Editor ----
+*~
+*.swp
+*.swo
+
+# ---- OS ----
+.DS_Store
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# ---- direnv ----
+.direnv
+.envrc
+.env
+
+# ---- pass ----
+.password-store/.gpg-id
+
 # ---- Packer ----
 # Cache objects
 packer_cache/
@@ -6,18 +25,15 @@ packer_cache/
 crash.log
 
 # https://www.packer.io/guides/hcl/variables
-# Exclude all .pkrvars.hcl files, which are likely to contain sensitive data, 
-# such as password, private keys, and other secrets. These should not be part of 
-# version control as they are data points which are potentially sensitive and 
+# Exclude all .pkrvars.hcl files, which are likely to contain sensitive data,
+# such as password, private keys, and other secrets. These should not be part of
+# version control as they are data points which are potentially sensitive and
 # subject to change depending on the environment.
 #
 *.pkrvars.hcl
 
-# For built boxes
-*.box
-
-# macOS
-.DS_Store
-
 # Packer Post-Processor manifest
 packer-manifest.json
+
+# ---- Vagrant ----
+*.box
